manifests/CiliumNetworkpolicy/cilium end to end flow/backend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: policy-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend
        image: docker.io/library/httpd:latest
        ports:
        - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: backend-svc
  namespace: policy-demo
spec:
  selector:
    app: backend
  ports:
  - port: 80
    targetPort: 80
