manifests/CiliumNetworkpolicy/cilium end to end flow/db.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db
  namespace: policy-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: db
  template:
    metadata:
      labels:
        app: db
    spec:
      containers:
      - name: db
        image: docker.io/library/mysql:latest
        ports:
        - containerPort: 3306

---
apiVersion: v1
kind: Service
metadata:
  name: db-svc
  namespace: policy-demo
spec:
  selector:
    app: db
  ports:
  - port: 3306   
    targetPort: 3306
