manifests/CiliumNetworkpolicy/cilium end to end flow/frontend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: policy-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        image: docker.io/library/nginx:latest
        ports:
        - containerPort: 80


---
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: policy-demo
spec:
  selector:
    app: frontend
  ports:
  - port: 80
    targetPort: 80
