manifests/CiliumNetworkpolicy/cilium end to end flow/l3-policy.yml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: L3-policy
  namespace: policy-demo
spec:
  endpointSelector:
    matchLabels:
      role: backend
  ingress:
  - fromEndpoints:
    - matchLabels:
        role: frontend
  

---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: L3-policy-egress
  namespace: policy-demo
spec:
  endpointSelector:
    matchLabels:
      role: backend
  egress:
  - toCIDR:
    - "1.1.1.1/32"
